--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -10,7 +10,7 @@
         <link href="{{ site.github.url }}/css/documentation.css" rel="stylesheet" />
         <link href="{{ site.github.url }}/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     </head>
-    <body class="noJs" yoi-environment="desktop" yoi-pagerewind>
+    <body class="noJs" yoi-environment="desktop" yoi-pagerewind yoi-scrollkeys>
         <script>document.body.className='js';</script>
         <header class="h-20 m-tb-4 b-b">
             <div class="center">
