--- a/src/less/utilities/layout.less
+++ b/src/less/utilities/layout.less
@@ -15,18 +15,25 @@
 
 // absolute positioning
 
-.pos-t    { position: absolute !important; top: 0 !important; }
-.pos-r    { position: absolute !important; right: 0 !important; }
-.pos-b    { position: absolute !important; bottom: 0 !important; }
-.pos-l    { position: absolute !important; left: 0 !important; }
-.pos-tl   { position: absolute !important; top: 0 !important; right: auto !important; bottom: auto !important; left: 0 !important; }
-.pos-tr   { position: absolute !important; top: 0 !important; right: 0 !important; bottom: auto !important; left: auto !important; }
-.pos-br   { position: absolute !important; top: auto !important; right: 0 !important; bottom: 0 !important; left: auto !important; }
-.pos-bl   { position: absolute !important; top: auto !important; right: auto !important; bottom: 0 !important; left: 0 !important; }
-.pos-t-c  { position: absolute !important; top: 50% !important; }
-.pos-r-c  { position: absolute !important; right: 50% !important; }
-.pos-b-c  { position: absolute !important; bottom: 50% !important; }
-.pos-l-c  { position: absolute !important; left: 50% !important; }
+.pos-t  { position: absolute !important; top: 0 !important; }
+.pos-r  { position: absolute !important; right: 0 !important; }
+.pos-b  { position: absolute !important; bottom: 0 !important; }
+.pos-l  { position: absolute !important; left: 0 !important; }
+.pos-tl { position: absolute !important; top: 0 !important; right: auto !important; bottom: auto !important; left: 0 !important; }
+.pos-tr { position: absolute !important; top: 0 !important; right: 0 !important; bottom: auto !important; left: auto !important; }
+.pos-br { position: absolute !important; top: auto !important; right: 0 !important; bottom: 0 !important; left: auto !important; }
+.pos-bl { position: absolute !important; top: auto !important; right: auto !important; bottom: 0 !important; left: 0 !important; }
+
+// fixed positioning
+
+.pos-fix-t  { position: fixed !important; top: 0 !important; }
+.pos-fix-r  { position: fixed !important; right: 0 !important; }
+.pos-fix-b  { position: fixed !important; bottom: 0 !important; }
+.pos-fix-l  { position: fixed !important; left: 0 !important; }
+.pos-fix-tl { position: fixed !important; top: 0 !important; right: auto !important; bottom: auto !important; left: 0 !important; }
+.pos-fix-tr { position: fixed !important; top: 0 !important; right: 0 !important; bottom: auto !important; left: auto !important; }
+.pos-fix-br { position: fixed !important; top: auto !important; right: 0 !important; bottom: 0 !important; left: auto !important; }
+.pos-fix-bl { position: fixed !important; top: auto !important; right: auto !important; bottom: 0 !important; left: 0 !important; }
 
 // "push" utilities for micro layout fixes
 
