--- a/src/less/theme/breakpoints.less
+++ b/src/less/theme/breakpoints.less
@@ -7,9 +7,14 @@
 @bp-only-l  : ~"only screen and (min-width: 96em) and (max-width: 121.9em)";
 @bp-only-xl : ~"only screen and (min-width: 122em)";
 
-// "overlapping" breakpoints
+// @bp-only-s  : ~"only screen and (max-width: 70em)";
+// @bp-only-m  : ~"only screen and (min-width: 70.1em)";
+// @bp-only-l  : ~"only screen and (min-width: 96rem)";
+// @bp-only-xl : ~"only screen and (min-width: 122em)";
 
-@bp-from-s  : ~"only screen and (max-width: 70em)";
-@bp-from-m  : ~"only screen and (min-width: 70.1em)";
-@bp-from-l  : ~"only screen and (min-width: 96rem)";
-@bp-from-xl : ~"only screen and (min-width: 122em)";
+// // "overlapping" breakpoints
+//
+// @bp-from-s  : ~"only screen and (max-width: 70em)";
+// @bp-from-m  : ~"only screen and (min-width: 70.1em)";
+// @bp-from-l  : ~"only screen and (min-width: 96rem)";
+// @bp-from-xl : ~"only screen and (min-width: 122em)";
