--- a/src/less/utilities/responsive-layout.less
+++ b/src/less/utilities/responsive-layout.less
@@ -2,7 +2,7 @@
 
 // small
 
-@media @bp-from-s {
+@media @bp-only-s {
 
     // display
 
@@ -122,7 +122,7 @@
 
 // medium
 
-@media @bp-from-m {
+@media @bp-only-m {
 
     // display
 
@@ -242,7 +242,7 @@
 
 // large
 
-@media @bp-from-l {
+@media @bp-only-l {
 
     // display
 
@@ -362,7 +362,7 @@
 
 // x-large
 
-@media @bp-from-xl {
+@media @bp-only-xl {
 
     // display
 
