--- a/src/less/utilities/responsive-spacing.less
+++ b/src/less/utilities/responsive-spacing.less
@@ -2,7 +2,7 @@
 
 // small
 
-@media @bp-from-s {
+@media @bp-only-s {
 
     // margin & padding
 
@@ -69,7 +69,7 @@
 
 // medium
 
-@media @bp-from-m {
+@media @bp-only-m {
 
     // margin & padding
 
@@ -136,7 +136,7 @@
 
 // large
 
-@media @bp-from-l {
+@media @bp-only-l {
 
     // margin & padding
 
@@ -203,7 +203,7 @@
 
 // x-large
 
-@media @bp-from-xl {
+@media @bp-only-xl {
 
     // margin & padding
 
