--- a/src/less/utilities/responsive-sizing.less
+++ b/src/less/utilities/responsive-sizing.less
@@ -2,7 +2,7 @@
 
 // small
 
-@media @bp-from-s {
+@media @bp-only-s {
 
     // fractional width
 
@@ -18,25 +18,24 @@
     .small-w-3-5,
     .small-w-4-5,
     .small-w-auto {
-        .mixin-clearfix;
-        box-sizing: border-box;
+        box-sizing: border-box !important;
     }
 
-    .small-w-1-1 { width: 100%; }
-    .small-w-1-2 { width: 50%; }
-    .small-w-1-3 { width: 33.33%; }
-    .small-w-1-4 { width: 25%; }
-    .small-w-1-5 { width: 20%; }
-    .small-w-1-6 { width: 16.67%; }
-    .small-w-2-3 { width: 66.67%; }
-    .small-w-2-5 { width: 40%; }
-    .small-w-3-4 { width: 75%; }
-    .small-w-3-5 { width: 60%; }
-    .small-w-4-5 { width: 80%; }
+    .small-w-1-1 { width: 100% !important; }
+    .small-w-1-2 { width: 50% !important; }
+    .small-w-1-3 { width: 33.33% !important; }
+    .small-w-1-4 { width: 25% !important; }
+    .small-w-1-5 { width: 20% !important; }
+    .small-w-1-6 { width: 16.67% !important; }
+    .small-w-2-3 { width: 66.67% !important; }
+    .small-w-2-5 { width: 40% !important; }
+    .small-w-3-4 { width: 75% !important; }
+    .small-w-3-5 { width: 60% !important; }
+    .small-w-4-5 { width: 80% !important; }
 
     // auto width
 
-    .small-w-auto { width: auto; }
+    .small-w-auto { width: auto !important; }
 
     // fixed width & height
 
@@ -51,7 +50,7 @@
 
 // medium
 
-@media @bp-from-m {
+@media @bp-only-m {
 
     // fractional width
 
@@ -67,25 +66,24 @@
     .medium-w-3-5,
     .medium-w-4-5,
     .medium-w-auto {
-        .mixin-clearfix;
-        box-sizing: border-box;
+        box-sizing: border-box !important;
     }
 
-    .medium-w-1-1 { width: 100%; }
-    .medium-w-1-2 { width: 50%; }
-    .medium-w-1-3 { width: 33.33%; }
-    .medium-w-1-4 { width: 25%; }
-    .medium-w-1-5 { width: 20%; }
-    .medium-w-1-6 { width: 16.67%; }
-    .medium-w-2-3 { width: 66.67%; }
-    .medium-w-2-5 { width: 40%; }
-    .medium-w-3-4 { width: 75%; }
-    .medium-w-3-5 { width: 60%; }
-    .medium-w-4-5 { width: 80%; }
+    .medium-w-1-1 { width: 100% !important; }
+    .medium-w-1-2 { width: 50% !important; }
+    .medium-w-1-3 { width: 33.33% !important; }
+    .medium-w-1-4 { width: 25% !important; }
+    .medium-w-1-5 { width: 20% !important; }
+    .medium-w-1-6 { width: 16.67% !important; }
+    .medium-w-2-3 { width: 66.67% !important; }
+    .medium-w-2-5 { width: 40% !important }
+    .medium-w-3-4 { width: 75% !important }
+    .medium-w-3-5 { width: 60% !important }
+    .medium-w-4-5 { width: 80% !important }
 
     // auto width
 
-    .medium-w-auto { width: auto; }
+    .medium-w-auto { width: auto !important; }
 
     // fixed width & height
 
@@ -100,7 +98,7 @@
 
 // large
 
-@media @bp-from-l {
+@media @bp-only-l {
     
     // fractional width
 
@@ -116,21 +114,20 @@
     .large-w-3-5,
     .large-w-4-5,
     .large-w-auto {
-        .mixin-clearfix;
-        box-sizing: border-box;
+        box-sizing: border-box !important;
     }
 
-    .large-w-1-1 { width: 100%; }
-    .large-w-1-2 { width: 50%; }
-    .large-w-1-3 { width: 33.33%; }
-    .large-w-1-4 { width: 25%; }
-    .large-w-1-5 { width: 20%; }
-    .large-w-1-6 { width: 16.67%; }
-    .large-w-2-3 { width: 66.67%; }
-    .large-w-2-5 { width: 40%; }
-    .large-w-3-4 { width: 75%; }
-    .large-w-3-5 { width: 60%; }
-    .large-w-4-5 { width: 80%; }
+    .large-w-1-1 { width: 100% !important; }
+    .large-w-1-2 { width: 50% !important; }
+    .large-w-1-3 { width: 33.33% !important; }
+    .large-w-1-4 { width: 25% !important; }
+    .large-w-1-5 { width: 20% !important; }
+    .large-w-1-6 { width: 16.67% !important; }
+    .large-w-2-3 { width: 66.67% !important; }
+    .large-w-2-5 { width: 40% !important; }
+    .large-w-3-4 { width: 75% !important; }
+    .large-w-3-5 { width: 60% !important; }
+    .large-w-4-5 { width: 80% !important; }
 
     // auto width
 
@@ -149,7 +146,7 @@
 
 // x-large
 
-@media @bp-from-xl {
+@media @bp-only-xl {
 
     // fractional width
 
@@ -165,25 +162,24 @@
     .xlarge-w-3-5,
     .xlarge-w-4-5,
     .xlarge-w-auto {
-        .mixin-clearfix;
-        box-sizing: border-box;
+        box-sizing: border-box !important;
     }
 
-    .xlarge-w-1-1 { width: 100%; }
-    .xlarge-w-1-2 { width: 50%; }
-    .xlarge-w-1-3 { width: 33.33%; }
-    .xlarge-w-1-4 { width: 25%; }
-    .xlarge-w-1-5 { width: 20%; }
-    .xlarge-w-1-6 { width: 16.67%; }
-    .xlarge-w-2-3 { width: 66.67%; }
-    .xlarge-w-2-5 { width: 40%; }
-    .xlarge-w-3-4 { width: 75%; }
-    .xlarge-w-3-5 { width: 60%; }
-    .xlarge-w-4-5 { width: 80%; }
+    .xlarge-w-1-1 { width: 100% !important; }
+    .xlarge-w-1-2 { width: 50% !important; }
+    .xlarge-w-1-3 { width: 33.33% !important; }
+    .xlarge-w-1-4 { width: 25% !important; }
+    .xlarge-w-1-5 { width: 20% !important; }
+    .xlarge-w-1-6 { width: 16.67% !important; }
+    .xlarge-w-2-3 { width: 66.67% !important; }
+    .xlarge-w-2-5 { width: 40% !important; }
+    .xlarge-w-3-4 { width: 75% !important; }
+    .xlarge-w-3-5 { width: 60% !important; }
+    .xlarge-w-4-5 { width: 80% !important; }
 
     // auto width
 
-    .xlarge-w-auto { width: auto; }
+    .xlarge-w-auto { width: auto !important; }
 
     // fixed width & height
 
