--- a/src/less/utilities/sizing.less
+++ b/src/less/utilities/sizing.less
@@ -14,22 +14,21 @@
 .w-3-5,
 .w-4-5,
 .w-auto {
-    .mixin-clearfix;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
 }
 
-.w-1-1 { width: 100%; }
-.w-1-2, .w-2-4, .w-3-6 { width: 50%; }
-.w-1-3 { width: 33.3%; }
-.w-1-4 { width: 25%; }
-.w-1-5 { width: 20%; }
-.w-1-6 { width: 16.6%; }
-.w-2-3, .w-4-6 { width: 66.6%; }
-.w-2-5 { width: 40%; }
-.w-3-4 { width: 75%; }
-.w-3-5 { width: 60%; }
-.w-4-5 { width: 80%; }
-.w-5-6 { width: 83.3%; }
+.w-1-1 { width: 100% !important; }
+.w-1-2, .w-2-4, .w-3-6 { width: 50% !important; }
+.w-1-3 { width: 33.3% !important; }
+.w-1-4 { width: 25% !important; }
+.w-1-5 { width: 20% !important; }
+.w-1-6 { width: 16.6% !important; }
+.w-2-3, .w-4-6 { width: 66.6% !important; }
+.w-2-5 { width: 40% !important; }
+.w-3-4 { width: 75% !important; }
+.w-3-5 { width: 60% !important; }
+.w-4-5 { width: 80% !important; }
+.w-5-6 { width: 83.3% !important; }
 
 // auto width
 
@@ -43,12 +42,12 @@
 
     .w-@{i} {
         width:  1rem * @i !important;
-        box-sizing: border-box;
+        box-sizing: border-box !important;
     }
 
     .h-@{i} {
         height: 1rem * @i !important;
-        box-sizing: border-box;
+        box-sizing: border-box !important;
     }
 
 }
