--- a/src/less/utilities/visibility.less
+++ b/src/less/utilities/visibility.less
@@ -4,4 +4,4 @@
 .vis-hid { visibility: hidden !important; }
 
 .visible {}
-.hidden  { .mixin-hidden !important; }
+.hidden  { .mixin-hide !important; }
