--- a/src/less/index.less
+++ b/src/less/index.less
@@ -23,31 +23,40 @@
 
 // utilities
 
+/*
+    To make sure overrides work properly, stick to the following
+    order for utilities:
+
+    1) utility.less
+    2) utility-responsive.less
+    3) utility-interactive.less
+*/
+
 @import "utilities/border.less";
 @import "utilities/color.less";
+@import "utilities/interactive-color.less";
 @import "utilities/cursor.less";
 @import "utilities/fx.less";
 @import "utilities/gradient.less";
 @import "utilities/grid.less";
-@import "utilities/interactive-color.less";
-@import "utilities/interactive-opacity.less";
-@import "utilities/interactive-shadow.less";
-@import "utilities/interactive-typography.less";
 @import "utilities/interface.less";
 @import "utilities/jsFallback.less";
 @import "utilities/layout.less";
-@import "utilities/opacity.less";
 @import "utilities/responsive-layout.less";
-@import "utilities/responsive-sizing.less";
-@import "utilities/responsive-spacing.less";
-@import "utilities/responsive-typography.less";
-@import "utilities/responsive-visibility.less";
+@import "utilities/opacity.less";
+@import "utilities/interactive-opacity.less";
 @import "utilities/shadow.less";
+@import "utilities/interactive-shadow.less";
 @import "utilities/sizing.less";
+@import "utilities/responsive-sizing.less";
 @import "utilities/spacing.less";
+@import "utilities/responsive-spacing.less";
 @import "utilities/transition.less";
 @import "utilities/typography.less";
+@import "utilities/responsive-typography.less";
+@import "utilities/interactive-typography.less";
 @import "utilities/visibility.less";
+@import "utilities/responsive-visibility.less";
 
 // elements
 
