--- a/src/less/utilities/grid.less
+++ b/src/less/utilities/grid.less
@@ -5,26 +5,26 @@
 
 .grid-inline {
 
-    box-sizing: border-box;
-    font-size: 0;
+    box-sizing: border-box !important;
+    font-size: 0 !important;
 
-    .w-1-1,
-    .w-1-2,
-    .w-1-3,
-    .w-1-4,
-    .w-1-5,
-    .w-1-6,
-    .w-2-3,
-    .w-2-4,
-    .w-2-5,
-    .w-2-6,
-    .w-3-4,
-    .w-3-5,
-    .w-3-6,
-    .w-4-5,
-    .w-4-6,
-    .w-5-6 {
-        display: inline-block;
+    [class*="w-1-1"],
+    [class*="w-1-2"],
+    [class*="w-1-3"],
+    [class*="w-1-4"],
+    [class*="w-1-5"],
+    [class*="w-1-6"],
+    [class*="w-2-3"],
+    [class*="w-2-4"],
+    [class*="w-2-5"],
+    [class*="w-2-6"],
+    [class*="w-3-4"],
+    [class*="w-3-5"],
+    [class*="w-3-6"],
+    [class*="w-4-5"],
+    [class*="w-4-6"],
+    [class*="w-5-6"] {
+        display: inline-block !important;
     }
 
 }
@@ -35,26 +35,29 @@
 .grid-float {
 
     .mixin-clearfix;
-    box-sizing: border-box;
-
-    .w-1-1,
-    .w-1-2,
-    .w-1-3,
-    .w-1-4,
-    .w-1-5,
-    .w-1-6,
-    .w-2-3,
-    .w-2-4,
-    .w-2-5,
-    .w-2-6,
-    .w-3-4,
-    .w-3-5,
-    .w-3-6,
-    .w-4-5,
-    .w-4-6,
-    .w-5-6 {
+    box-sizing: border-box !important;
+    
+    [class*="w-1-1"] {
         .mixin-clearfix;
-        float: left;
+    }
+
+    [class*="w-1-1"],
+    [class*="w-1-2"],
+    [class*="w-1-3"],
+    [class*="w-1-4"],
+    [class*="w-1-5"],
+    [class*="w-1-6"],
+    [class*="w-2-3"],
+    [class*="w-2-4"],
+    [class*="w-2-5"],
+    [class*="w-2-6"],
+    [class*="w-3-4"],
+    [class*="w-3-5"],
+    [class*="w-3-6"],
+    [class*="w-4-5"],
+    [class*="w-4-6"],
+    [class*="w-5-6"] {
+        float: left !important;
     }
 
 }
@@ -64,286 +67,286 @@
 
 .grid-flex {
 
-    display: flex;
-    flex-wrap: wrap;
+    display: flex !important;
+    flex-wrap: wrap !important;
 
-    .w-1-1,
-    .w-1-2,
-    .w-1-3,
-    .w-1-4,
-    .w-1-5,
-    .w-1-6,
-    .w-2-3,
-    .w-2-4,
-    .w-2-5,
-    .w-2-6,
-    .w-3-4,
-    .w-3-5,
-    .w-3-6,
-    .w-4-5,
-    .w-4-6,
-    .w-5-6 {
-        display: flex;
-        flex-direction: column;
+    [class*="w-1-1"],
+    [class*="w-1-2"],
+    [class*="w-1-3"],
+    [class*="w-1-4"],
+    [class*="w-1-5"],
+    [class*="w-1-6"],
+    [class*="w-2-3"],
+    [class*="w-2-4"],
+    [class*="w-2-5"],
+    [class*="w-2-6"],
+    [class*="w-3-4"],
+    [class*="w-3-5"],
+    [class*="w-3-6"],
+    [class*="w-4-5"],
+    [class*="w-4-6"],
+    [class*="w-5-6"] {
+        display: flex !important;
+        flex-direction: column !important;
     }
 
     // flex layout options
 
-    &.flex-wrap                      { flex-wrap: wrap; }
-    &.flex-noWrap                    { flex-wrap: nowrap; }
-    &.flex-wrapReverse               { flex-wrap: wrap-reverse; }
+    &.flex-wrap                      { flex-wrap: wrap !important; }
+    &.flex-noWrap                    { flex-wrap: nowrap !important; }
+    &.flex-wrapReverse               { flex-wrap: wrap-reverse !important; }
 
-    &.flex-directionRow              { flex-direction: row; }
-    &.flex-directionRowReverse       { flex-direction: row-reverse; }
-    &.flex-directionColumn           { flex-direction: column; }
-    &.flex-directionColumnReverse    { flex-direction: column-reverse; }
+    &.flex-directionRow              { flex-direction: row !important; }
+    &.flex-directionRowReverse       { flex-direction: row-reverse !important; }
+    &.flex-directionColumn           { flex-direction: column !important; }
+    &.flex-directionColumnReverse    { flex-direction: column-reverse !important; }
 
-    &.flex-alignStart { align-items: flex-start; }
+    &.flex-alignStart { align-items: flex-start !important; }
 
-    &.flex-alignEnd { align-items: flex-end; }
+    &.flex-alignEnd { align-items: flex-end !important; }
     &.flex-alignEnd {
-        .w-1-1,
-        .w-1-2,
-        .w-1-3,
-        .w-1-4,
-        .w-1-5,
-        .w-1-6,
-        .w-2-3,
-        .w-2-4,
-        .w-2-5,
-        .w-2-6,
-        .w-3-4,
-        .w-3-5,
-        .w-3-6,
-        .w-4-5,
-        .w-4-6,
-        .w-5-6 {
-            vertical-align: bottom;
+        [class*="w-1-1"],
+        [class*="w-1-2"],
+        [class*="w-1-3"],
+        [class*="w-1-4"],
+        [class*="w-1-5"],
+        [class*="w-1-6"],
+        [class*="w-2-3"],
+        [class*="w-2-4"],
+        [class*="w-2-5"],
+        [class*="w-2-6"],
+        [class*="w-3-4"],
+        [class*="w-3-5"],
+        [class*="w-3-6"],
+        [class*="w-4-5"],
+        [class*="w-4-6"],
+        [class*="w-5-6"] {
+            vertical-align: bottom !important;
         }
     }
 
-    &.flex-alignCenter { align-items: center; }
+    &.flex-alignCenter { align-items: center !important; }
     &.flex-alignCenter {
-        .w-1-1,
-        .w-1-2,
-        .w-1-3,
-        .w-1-4,
-        .w-1-5,
-        .w-1-6,
-        .w-2-3,
-        .w-2-4,
-        .w-2-5,
-        .w-2-6,
-        .w-3-4,
-        .w-3-5,
-        .w-3-6,
-        .w-4-5,
-        .w-4-6,
-        .w-5-6 {
-            vertical-align: middle;
+        [class*="w-1-1"],
+        [class*="w-1-2"],
+        [class*="w-1-3"],
+        [class*="w-1-4"],
+        [class*="w-1-5"],
+        [class*="w-1-6"],
+        [class*="w-2-3"],
+        [class*="w-2-4"],
+        [class*="w-2-5"],
+        [class*="w-2-6"],
+        [class*="w-3-4"],
+        [class*="w-3-5"],
+        [class*="w-3-6"],
+        [class*="w-4-5"],
+        [class*="w-4-6"],
+        [class*="w-5-6"] {
+            vertical-align: middle !important;
         }
     }
 
-    &.flex-alignBaseline { align-items: baseline; }
+    &.flex-alignBaseline { align-items: baseline !important; }
     &.flex-alignBaseline {
-        .w-1-1,
-        .w-1-2,
-        .w-1-3,
-        .w-1-4,
-        .w-1-5,
-        .w-1-6,
-        .w-2-3,
-        .w-2-4,
-        .w-2-5,
-        .w-2-6,
-        .w-3-4,
-        .w-3-5,
-        .w-3-6,
-        .w-4-5,
-        .w-4-6,
-        .w-5-6 {
-            vertical-align: baseline;
+        [class*="w-1-1"],
+        [class*="w-1-2"],
+        [class*="w-1-3"],
+        [class*="w-1-4"],
+        [class*="w-1-5"],
+        [class*="w-1-6"],
+        [class*="w-2-3"],
+        [class*="w-2-4"],
+        [class*="w-2-5"],
+        [class*="w-2-6"],
+        [class*="w-3-4"],
+        [class*="w-3-5"],
+        [class*="w-3-6"],
+        [class*="w-4-5"],
+        [class*="w-4-6"],
+        [class*="w-5-6"] {
+            vertical-align: baseline !important;
         }
     }
 
-    &.flex-aligncontentStart { align-content: flex-start; }
+    &.flex-aligncontentStart { align-content: flex-start !important; }
 
-    &.flex-alignContentEnd { align-content: flex-end; }
+    &.flex-alignContentEnd { align-content: flex-end !important; }
     &.flex-alignContentEnd {
-        .w-1-1,
-        .w-1-2,
-        .w-1-3,
-        .w-1-4,
-        .w-1-5,
-        .w-1-6,
-        .w-2-3,
-        .w-2-4,
-        .w-2-5,
-        .w-2-6,
-        .w-3-4,
-        .w-3-5,
-        .w-3-6,
-        .w-4-5,
-        .w-4-6,
-        .w-5-6 {
-            vertical-align: bottom;
+        [class*="w-1-1"],
+        [class*="w-1-2"],
+        [class*="w-1-3"],
+        [class*="w-1-4"],
+        [class*="w-1-5"],
+        [class*="w-1-6"],
+        [class*="w-2-3"],
+        [class*="w-2-4"],
+        [class*="w-2-5"],
+        [class*="w-2-6"],
+        [class*="w-3-4"],
+        [class*="w-3-5"],
+        [class*="w-3-6"],
+        [class*="w-4-5"],
+        [class*="w-4-6"],
+        [class*="w-5-6"] {
+            vertical-align: bottom !important;
         }
     }
 
-    &.flex-alignContentCenter        { align-content: center; }
-    &.flex-alignContentSpaceBetween  { align-content: space-between; }
-    &.flex-alignContentSpaceAround   { align-content: space-around; }
-    &.flex-alignSelfStretch          { align-self: stretch; }
-    &.flex-alignSelfStart            { align-self: flex-start; }
+    &.flex-alignContentCenter        { align-content: center !important; }
+    &.flex-alignContentSpaceBetween  { align-content: space-between !important; }
+    &.flex-alignContentSpaceAround   { align-content: space-around !important; }
+    &.flex-alignSelfStretch          { align-self: stretch !important; }
+    &.flex-alignSelfStart            { align-self: flex-start !important; }
 
     &.flex-alignSelfEnd {
-      align-self: flex-end;
-      vertical-align: bottom;
+      align-self: flex-end !important;
+      vertical-align: bottom !important;
     }
 
     &.flex-alignSelfCenter {
-      align-self: center;
-      vertical-align: middle;
+      align-self: center !important;
+      vertical-align: middle !important;
     }
 
     &.flex-alignSelfBaseline {
-      align-self: baseline;
-      vertical-align: baseline;
+      align-self: baseline !important;
+      vertical-align: baseline !important;
     }
 
     &.flex-justifyStart {
-      text-align: left;
-      justify-content: flex-start;
+      text-align: left !important;
+      justify-content: flex-start !important;
     }
 
     &.flex-justifyEnd {
-      text-align: right;
-      text-align-last: right;
-      justify-content: flex-end;
+      text-align: right !important;
+      text-align-last: right !important;
+      justify-content: flex-end !important;
     }
 
     &.flex-justifyEnd {
-        .w-1-1,
-        .w-1-2,
-        .w-1-3,
-        .w-1-4,
-        .w-1-5,
-        .w-1-6,
-        .w-2-3,
-        .w-2-4,
-        .w-2-5,
-        .w-2-6,
-        .w-3-4,
-        .w-3-5,
-        .w-3-6,
-        .w-4-5,
-        .w-4-6,
-        .w-5-6 {
-            text-align: left;
-            text-align: start;
-            text-align: initial;
-            -moz-text-align-last: left;
-            -moz-text-align-last: start;
-            -moz-text-align-last: initial;
-            text-align-last: left;
-            text-align-last: start;
-            text-align-last: initial;
+        [class*="w-1-1"],
+        [class*="w-1-2"],
+        [class*="w-1-3"],
+        [class*="w-1-4"],
+        [class*="w-1-5"],
+        [class*="w-1-6"],
+        [class*="w-2-3"],
+        [class*="w-2-4"],
+        [class*="w-2-5"],
+        [class*="w-2-6"],
+        [class*="w-3-4"],
+        [class*="w-3-5"],
+        [class*="w-3-6"],
+        [class*="w-4-5"],
+        [class*="w-4-6"],
+        [class*="w-5-6"] {
+            text-align: left !important;
+            text-align: start !important;
+            text-align: initial !important;
+            -moz-text-align-last: left !important;
+            -moz-text-align-last: start !important;
+            -moz-text-align-last: initial !important;
+            text-align-last: left !important;
+            text-align-last: start !important;
+            text-align-last: initial !important;
         }
     }
 
     &.flex-justifyCenter {
-      text-align: center;
-      text-align-last: center;
-      justify-content: center;
+      text-align: center !important;
+      text-align-last: center !important;
+      justify-content: center !important;
     }
 
     &.flex-justifyCenter {
-        .w-1-1,
-        .w-1-2,
-        .w-1-3,
-        .w-1-4,
-        .w-1-5,
-        .w-1-6,
-        .w-2-3,
-        .w-2-4,
-        .w-2-5,
-        .w-2-6,
-        .w-3-4,
-        .w-3-5,
-        .w-3-6,
-        .w-4-5,
-        .w-4-6,
-        .w-5-6 {
-            text-align: left;
-            text-align: start;
-            text-align: initial;
-            text-align-last: left;
-            text-align-last: start;
-            text-align-last: initial;
+        [class*="w-1-1"],
+        [class*="w-1-2"],
+        [class*="w-1-3"],
+        [class*="w-1-4"],
+        [class*="w-1-5"],
+        [class*="w-1-6"],
+        [class*="w-2-3"],
+        [class*="w-2-4"],
+        [class*="w-2-5"],
+        [class*="w-2-6"],
+        [class*="w-3-4"],
+        [class*="w-3-5"],
+        [class*="w-3-6"],
+        [class*="w-4-5"],
+        [class*="w-4-6"],
+        [class*="w-5-6"] {
+            text-align: left !important;
+            text-align: start !important;
+            text-align: initial !important;
+            text-align-last: left !important;
+            text-align-last: start !important;
+            text-align-last: initial !important;
         }
     }
 
     &.flex-justifySpaceBetween {
-      text-align: justify;
-      text-align-last: justify;
-      justify-content: space-between;
+      text-align: justify !important;
+      text-align-last: justify !important;
+      justify-content: space-between !important;
     }
 
     &.flex-justifySpaceBetween {
-        .w-1-1,
-        .w-1-2,
-        .w-1-3,
-        .w-1-4,
-        .w-1-5,
-        .w-1-6,
-        .w-2-3,
-        .w-2-4,
-        .w-2-5,
-        .w-2-6,
-        .w-3-4,
-        .w-3-5,
-        .w-3-6,
-        .w-4-5,
-        .w-4-6,
-        .w-5-6 {
-            text-align: left;
-            text-align: start;
-            text-align: initial;
-            text-align-last: left;
-            text-align-last: start;
-            text-align-last: initial;
+        [class*="w-1-1"],
+        [class*="w-1-2"],
+        [class*="w-1-3"],
+        [class*="w-1-4"],
+        [class*="w-1-5"],
+        [class*="w-1-6"],
+        [class*="w-2-3"],
+        [class*="w-2-4"],
+        [class*="w-2-5"],
+        [class*="w-2-6"],
+        [class*="w-3-4"],
+        [class*="w-3-5"],
+        [class*="w-3-6"],
+        [class*="w-4-5"],
+        [class*="w-4-6"],
+        [class*="w-5-6"] {
+            text-align: left !important;
+            text-align: start !important;
+            text-align: initial !important;
+            text-align-last: left !important;
+            text-align-last: start !important;
+            text-align-last: initial !important;
         }
     }
 
     &.flex-justifySpaceAround {
-      text-align: justify;
-      text-align-last: justify;
-      justify-content: space-around;
+      text-align: justify !important;
+      text-align-last: justify !important;
+      justify-content: space-around !important;
     }
 
     &.flex-justifySpaceAround {
-        .w-1-1,
-        .w-1-2,
-        .w-1-3,
-        .w-1-4,
-        .w-1-5,
-        .w-1-6,
-        .w-2-3,
-        .w-2-4,
-        .w-2-5,
-        .w-2-6,
-        .w-3-4,
-        .w-3-5,
-        .w-3-6,
-        .w-4-5,
-        .w-4-6,
-        .w-5-6 {
-            text-align: left;
-            text-align: start;
-            text-align: initial;
-            text-align-last: left;
-            text-align-last: start;
-            text-align-last: initial;
+        [class*="w-1-1"],
+        [class*="w-1-2"],
+        [class*="w-1-3"],
+        [class*="w-1-4"],
+        [class*="w-1-5"],
+        [class*="w-1-6"],
+        [class*="w-2-3"],
+        [class*="w-2-4"],
+        [class*="w-2-5"],
+        [class*="w-2-6"],
+        [class*="w-3-4"],
+        [class*="w-3-5"],
+        [class*="w-3-6"],
+        [class*="w-4-5"],
+        [class*="w-4-6"],
+        [class*="w-5-6"] {
+            text-align: left !important;
+            text-align: start !important;
+            text-align: initial !important;
+            text-align-last: left !important;
+            text-align-last: start !important;
+            text-align-last: initial !important;
         }
     }
 
