--- a/src/less/utilities/responsive-sizing.less
+++ b/src/less/utilities/responsive-sizing.less
@@ -1,196 +1,69 @@
 /** responsive-sizing.less */
 
-// small
+// "contructor"
 
-@media @bp-only-s {
+.responsive-sizing(@prefix) {
 
     // fractional width
 
-    .small-w-1-1,
-    .small-w-1-2,
-    .small-w-1-3,
-    .small-w-1-4,
-    .small-w-1-5,
-    .small-w-1-6,
-    .small-w-2-3,
-    .small-w-2-5,
-    .small-w-3-4,
-    .small-w-3-5,
-    .small-w-4-5,
-    .small-w-auto {
+    .@{prefix}--w-1-1,
+    .@{prefix}--w-1-2,
+    .@{prefix}--w-1-3,
+    .@{prefix}--w-1-4,
+    .@{prefix}--w-1-5,
+    .@{prefix}--w-1-6,
+    .@{prefix}--w-2-3,
+    .@{prefix}--w-2-5,
+    .@{prefix}--w-3-4,
+    .@{prefix}--w-3-5,
+    .@{prefix}--w-4-5,
+    .@{prefix}--w-auto {
         box-sizing: border-box !important;
     }
 
-    .small-w-1-1 { width: 100% !important; }
-    .small-w-1-2 { width: 50% !important; }
-    .small-w-1-3 { width: 33.33% !important; }
-    .small-w-1-4 { width: 25% !important; }
-    .small-w-1-5 { width: 20% !important; }
-    .small-w-1-6 { width: 16.67% !important; }
-    .small-w-2-3 { width: 66.67% !important; }
-    .small-w-2-5 { width: 40% !important; }
-    .small-w-3-4 { width: 75% !important; }
-    .small-w-3-5 { width: 60% !important; }
-    .small-w-4-5 { width: 80% !important; }
+    .@{prefix}--w-1-1 { width: 100% !important; }
+    .@{prefix}--w-1-2 { width: 50% !important; }
+    .@{prefix}--w-1-3 { width: 33.33% !important; }
+    .@{prefix}--w-1-4 { width: 25% !important; }
+    .@{prefix}--w-1-5 { width: 20% !important; }
+    .@{prefix}--w-1-6 { width: 16.67% !important; }
+    .@{prefix}--w-2-3 { width: 66.67% !important; }
+    .@{prefix}--w-2-5 { width: 40% !important; }
+    .@{prefix}--w-3-4 { width: 75% !important; }
+    .@{prefix}--w-3-5 { width: 60% !important; }
+    .@{prefix}--w-4-5 { width: 80% !important; }
 
     // auto width
 
-    .small-w-auto { width: auto !important; }
+    .@{prefix}--w-auto { width: auto !important; }
 
     // fixed width & height
 
     .generate_width_height (@i) when (@i > 0) {
         .generate_width_height((@i - 1));
-        .small-w-@{i} { width:  1rem * @i !important; }
-        .small-h-@{i} { height: 1rem * @i !important; }
+        .@{prefix}--w-@{i} { width:  1rem * @i !important; }
+        .@{prefix}--h-@{i} { height: 1rem * @i !important; }
     }
     .generate_width_height(60);
 
 }
+
+// small
+
+@media @bp-s { .responsive-sizing(s); }
+@media @bp-only-s { .responsive-sizing(only-s); }
 
 // medium
 
-@media @bp-only-m {
-
-    // fractional width
-
-    .medium-w-1-1,
-    .medium-w-1-2,
-    .medium-w-1-3,
-    .medium-w-1-4,
-    .medium-w-1-5,
-    .medium-w-1-6,
-    .medium-w-2-3,
-    .medium-w-2-5,
-    .medium-w-3-4,
-    .medium-w-3-5,
-    .medium-w-4-5,
-    .medium-w-auto {
-        box-sizing: border-box !important;
-    }
-
-    .medium-w-1-1 { width: 100% !important; }
-    .medium-w-1-2 { width: 50% !important; }
-    .medium-w-1-3 { width: 33.33% !important; }
-    .medium-w-1-4 { width: 25% !important; }
-    .medium-w-1-5 { width: 20% !important; }
-    .medium-w-1-6 { width: 16.67% !important; }
-    .medium-w-2-3 { width: 66.67% !important; }
-    .medium-w-2-5 { width: 40% !important }
-    .medium-w-3-4 { width: 75% !important }
-    .medium-w-3-5 { width: 60% !important }
-    .medium-w-4-5 { width: 80% !important }
-
-    // auto width
-
-    .medium-w-auto { width: auto !important; }
-
-    // fixed width & height
-
-    .generate_width_height (@i) when (@i > 0) {
-        .generate_width_height((@i - 1));
-        .medium-w-@{i} { width:  1rem * @i !important; }
-        .medium-h-@{i} { height: 1rem * @i !important; }
-    }
-    .generate_width_height(60);
-
-}
+@media @bp-m { .responsive-sizing(m); }
+@media @bp-only-m { .responsive-sizing(only-m); }
 
 // large
 
-@media @bp-only-l {
-    
-    // fractional width
-
-    .large-w-1-1,
-    .large-w-1-2,
-    .large-w-1-3,
-    .large-w-1-4,
-    .large-w-1-5,
-    .large-w-1-6,
-    .large-w-2-3,
-    .large-w-2-5,
-    .large-w-3-4,
-    .large-w-3-5,
-    .large-w-4-5,
-    .large-w-auto {
-        box-sizing: border-box !important;
-    }
-
-    .large-w-1-1 { width: 100% !important; }
-    .large-w-1-2 { width: 50% !important; }
-    .large-w-1-3 { width: 33.33% !important; }
-    .large-w-1-4 { width: 25% !important; }
-    .large-w-1-5 { width: 20% !important; }
-    .large-w-1-6 { width: 16.67% !important; }
-    .large-w-2-3 { width: 66.67% !important; }
-    .large-w-2-5 { width: 40% !important; }
-    .large-w-3-4 { width: 75% !important; }
-    .large-w-3-5 { width: 60% !important; }
-    .large-w-4-5 { width: 80% !important; }
-
-    // auto width
-
-    .large-w-auto { width: auto; }
-
-    // fixed width & height
-
-    .generate_width_height (@i) when (@i > 0) {
-        .generate_width_height((@i - 1));
-        .large-w-@{i} { width:  1rem * @i !important; }
-        .large-h-@{i} { height: 1rem * @i !important; }
-    }
-    .generate_width_height(60);
-
-}
+@media @bp-l { .responsive-sizing(l); }
+@media @bp-only-l { .responsive-sizing(only-l); }
 
 // x-large
 
-@media @bp-only-xl {
-
-    // fractional width
-
-    .xlarge-w-1-1,
-    .xlarge-w-1-2,
-    .xlarge-w-1-3,
-    .xlarge-w-1-4,
-    .xlarge-w-1-5,
-    .xlarge-w-1-6,
-    .xlarge-w-2-3,
-    .xlarge-w-2-5,
-    .xlarge-w-3-4,
-    .xlarge-w-3-5,
-    .xlarge-w-4-5,
-    .xlarge-w-auto {
-        box-sizing: border-box !important;
-    }
-
-    .xlarge-w-1-1 { width: 100% !important; }
-    .xlarge-w-1-2 { width: 50% !important; }
-    .xlarge-w-1-3 { width: 33.33% !important; }
-    .xlarge-w-1-4 { width: 25% !important; }
-    .xlarge-w-1-5 { width: 20% !important; }
-    .xlarge-w-1-6 { width: 16.67% !important; }
-    .xlarge-w-2-3 { width: 66.67% !important; }
-    .xlarge-w-2-5 { width: 40% !important; }
-    .xlarge-w-3-4 { width: 75% !important; }
-    .xlarge-w-3-5 { width: 60% !important; }
-    .xlarge-w-4-5 { width: 80% !important; }
-
-    // auto width
-
-    .xlarge-w-auto { width: auto !important; }
-
-    // fixed width & height
-
-    .generate_width_height (@i) when (@i > 0) {
-
-        .generate_width_height((@i - 1));
-
-        .xlarge-w-@{i} { width:  1rem * @i !important; }
-        .xlarge-h-@{i} { height: 1rem * @i !important; }
-
-    }
-    .generate_width_height(60);
-
-}
+@media @bp-xl { .responsive-sizing(xl); }
+@media @bp-only-xl { .responsive-sizing(only-xl); }
