--- a/src/less/utilities/responsive-visibility.less
+++ b/src/less/utilities/responsive-visibility.less
@@ -1,45 +1,21 @@
 /** responsive-visibility.less */
 
-// visible *only* at specific breakpoints
+// small
 
-@media @bp-only-s {
-    .m--visible  { .mixin-hidden !important; }
-    .l--visible  { .mixin-hidden !important; }
-    .xl--visible { .mixin-hidden !important; }
-}
+@media @bp-s { .s--hidden { .mixin-hide !important; } }
+@media @bp-only-s { .only-s--hidden { .mixin-hide !important; } }
 
-@media @bp-only-m {
-    .s--visisble  { .mixin-hidden !important; }
-    .l--visisble  { .mixin-hidden !important; }
-    .xl--visisble { .mixin-hidden !important; }
-}
+// medium
 
-@media @bp-only-l {
-    .s--visible  { .mixin-hidden !important; }
-    .m--visible  { .mixin-hidden !important; }
-    .xl--visible { .mixin-hidden !important; }
-}
+@media @bp-m { .m--hidden { .mixin-hide !important; } }
+@media @bp-only-m { .only-m--hidden { .mixin-hide !important; } }
 
-@media @bp-only-xl {
-    .s--visisble { .mixin-hidden !important; }
-    .m--visisble { .mixin-hidden !important; }
-    .l--visisble { .mixin-hidden !important; }
-}
+// large
 
-// hidden *only* at specific breakpoints
+@media @bp-l { .l--hidden { .mixin-hide !important; } }
+@media @bp-only-l { .only-l--hidden { .mixin-hide !important; } }
 
-@media @bp-only-s {
-    .s--hidden { .mixin-hidden !important; }
-}
+// x-large
 
-@media @bp-only-m {
-    .m--hidden { .mixin-hidden !important; }
-}
-
-@media @bp-only-l {
-    .l--hidden { .mixin-hidden !important; }
-}
-
-@media @bp-only-xl {
-    .xl--hidden { .mixin-hidden !important; }
-}
+@media @bp-xl { .xl--hidden { .mixin-hide !important; } }
+@media @bp-only-xl { .only-xl--hidden { .mixin-hide !important; } }
