--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=1" />
         <title>YOI – Yoshino UI Core | {{ page.title | default: "Documentation" }}</title>
         {% if jekyll.environment == "development" %}
             <base href="/" />
@@ -28,10 +30,10 @@
             </div>
         </header>
         <div class="center grid-float">
-            <nav class="w-1-5 m-t-6">
+            <nav class="w-1-1 l--w-1-5 m-t-6">
                 {% include menu-sub.html %}
             </nav>
-            <article class="article w-4-5 p-l-10">
+            <article class="article w-1-1 l--w-4-5 l--p-l-10">
                 {{ content }}
             </article>
         </div>
