--- a/docs/_layouts/blank.html
+++ b/docs/_layouts/blank.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=1" />
         <title>YOI – Yoshino UI Core | {{ page.title | default: "Documentation" }}</title>
         {% if jekyll.environment == "development" %}
             <base href="/" />
